--- a/config.json
+++ b/config.json
@@ -11,35 +11,20 @@
   "runSpeed": 1.5,
   "maxHeartbeatInterval": 300000,
   "verbose": true,
-  "WIDTH": 5000,
-  "HEIGHT": 5000,
+  "WIDTH": 4000,
+  "HEIGHT": 4000,
   "MODE": "tdm",
   "RANDOM_COLORS": false,
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
-        ["bas1", "bas1", "norm", "norm", "norm", "roid", "norm", "norm", "norm", "roid", "roid", "norm", "norm", "norm", "roid", "norm", "norm", "norm", "bas4", "bas4"],
-        ["bas1", "bas1", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "roid", "norm", "norm", "norm", "norm", "norm", "norm", "bas4", "bas4"],
-        ["norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
-        ["norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "roid", "roid", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
-        ["norm", "norm", "norm", "norm", "roid", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "roid", "norm", "norm", "norm", "norm"],
-        ["roid", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "roid"],
-        ["norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "nest", "nest", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
-        ["norm", "norm", "norm", "norm", "norm", "norm", "norm", "roid", "nest", "nest", "nest", "nest", "roid", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
-        ["norm", "norm", "norm", "norm", "norm", "norm", "norm", "nest", "nest", "nest", "nest", "nest", "nest", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
-        ["roid", "norm", "norm", "roid", "norm", "norm", "nest", "nest", "nest", "roid", "norm", "nest", "nest", "nest", "norm", "norm", "roid", "norm", "norm", "roid"],
-        ["roid", "norm", "norm", "roid", "norm", "norm", "nest", "nest", "nest", "norm", "roid", "nest", "nest", "nest", "norm", "norm", "roid", "norm", "norm", "roid"],
-        ["norm", "norm", "norm", "norm", "norm", "norm", "norm", "nest", "nest", "nest", "nest", "nest", "nest", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
-        ["norm", "norm", "norm", "norm", "norm", "norm", "norm", "roid", "nest", "nest", "nest", "nest", "roid", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
-        ["norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "nest", "nest", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
-        ["roid", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "roid"],
-        ["norm", "norm", "norm", "norm", "roid", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
-        ["norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "roid", "roid", "norm", "norm", "norm", "norm", "roid", "norm", "norm", "norm", "norm"],
-        ["norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
-        ["bas2", "bas2", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "bas3", "bas3"],
-        ["bas2", "bas2", "norm", "norm", "norm", "roid", "norm", "norm", "norm", "roid", "roid", "norm", "norm", "norm", "roid", "norm", "norm", "norm", "bas3", "bas3"]
-    ],
-  "X_GRID": 20,
-  "Y_GRID": 20,
+    [ "bas1", "rock", "norm", "rock", "bas2" ],
+    [ "rock", "norm", "norm", "norm", "rock" ],
+    [ "norm", "norm", "nest", "norm", "norm" ],
+    [ "rock", "norm", "norm", "norm", "rock" ],
+    [ "bas4", "rock", "norm", "rock", "bas3" ]
+  ],
+  "X_GRID": 5,
+  "Y_GRID": 5,
   "DAMAGE_CONSTANT": 0.6,
   "KNOCKBACK_CONSTANT": 1,
   "ROOM_BOUND_FORCE": 0.01,
@@ -74,7 +59,7 @@
   "MIN_SPEED": 0.001,
   "FOOD_AMOUNT": 0.5, 
   "SKILL_BOOST": 5,
-  "SMSH_BOTS": 6,
-  "BOTS": 25,
+  "SMSH_BOTS": 5,
+  "BOTS": 15,
   "GLASS_HEALTH_FACTOR": 2
 }
