😇😇Updated with Glitch

--- a/config.json
+++ b/config.json
@@ -11,20 +11,22 @@
   "runSpeed": 1.5,
   "maxHeartbeatInterval": 300000,
   "verbose": true,
-  "WIDTH": 4000,
-  "HEIGHT": 4000,
+  "WIDTH": 4500,
+  "HEIGHT": 4500,
   "MODE": "tdm",
   "RANDOM_COLORS": false,
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
-    [ "bas1", "rock", "norm", "rock", "bas2" ],
-    [ "rock", "norm", "norm", "norm", "rock" ],
-    [ "norm", "norm", "nest", "norm", "norm" ],
-    [ "rock", "norm", "norm", "norm", "rock" ],
-    [ "bas4", "rock", "norm", "rock", "bas3" ]
+    ["bas1", "rock", "norm", "roid", "norm", "rock", "bas2"],
+    ["rock", "norm", "rock", "nest", "rock", "norm", "rock"],
+    ["norm", "rock", "nest", "nest", "nest", "rock", "norm"],
+    ["roid", "nest", "nest", "nest", "nest", "nest", "roid"],
+    ["norm", "rock", "nest", "nest", "nest", "rock", "norm"],
+    ["rock", "norm", "rock", "nest", "rock", "norm", "rock"],
+    ["bas3", "rock", "norm", "roid", "norm", "rock", "bas4"]
   ],
-  "X_GRID": 5,
-  "Y_GRID": 5,
+  "X_GRID": 7,
+  "Y_GRID": 7,
   "DAMAGE_CONSTANT": 0.6,
   "KNOCKBACK_CONSTANT": 1,
   "ROOM_BOUND_FORCE": 0.01,
