--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
   "HEIGHT": 6000,
   "MODE": "tdm",
   "RANDOM_COLORS": false,
-  "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
+  "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi",
   "ROOM_SETUP": [
     ["bas1", "rock", "norm", "roid", "norm", "rock", "bas2"],
     ["rock", "norm", "rock", "nest", "rock", "norm", "rock"],
@@ -30,24 +30,8 @@
   "DAMAGE_CONSTANT": 0.6,
   "KNOCKBACK_CONSTANT": 1,
   "ROOM_BOUND_FORCE": 0.01,
-  "FOOD": [
-    0, 
-    0.75,
-    0.22,
-    0.1,
-    0.005,
-    0,
-    0
-  ],
-  "FOOD_NEST": [
-    0, 
-    0.0,
-    0.0,
-    0.75,
-    0.23,
-    0.02,
-    0
-  ],
+  "FOOD": [0, 0.75, 0.22, 0.1, 0.005, 0, 0],
+  "FOOD_NEST": [0, 0.0, 0.0, 0.75, 0.23, 0.02, 0],
   "MAX_SKILL": 9,
   "SOFT_MAX_SKILL": 0.59,
   "TIER_1": 15,
@@ -59,7 +43,7 @@
   "SKILL_LEAK": 0,
   "STEALTH": 4,
   "MIN_SPEED": 0.001,
-  "FOOD_AMOUNT": 0.5, 
+  "FOOD_AMOUNT": 0.5,
   "SKILL_BOOST": 5,
   "SMSH_BOTS": 4,
   "BOTS": 11,
